tests/NormalTests/paczka1/fuzzy1/96931218.err
Error in line 1: 3zDaO S234 58,1
Error in line 11: e4KIkasei S472 80,8
Error in line 14: e4KIkasei S234 20,7
Error in line 22: e4KIkasei S472 9,9
